--- a/messages.yaml
+++ b/messages.yaml
@@ -5,9 +5,9 @@ News:
 Hello:
   url: 'https://open.spotify.com/playlist/0lzAF8YIO9CCLRDCYf4RpV'
   hi: 'Вітаю!'
-  text: 'Мы хочам праз нашага бота паказаць табе, як шмат беларускай музыкі існуе.
-  Кожны тыдзень мы будзем дасылаць табе трэкі, якія нам падабаюцца.
-  А пакуль можаш паслухаць іх ніжэй, націснуўшы на кнопку.'
+  text: 'Мы хочам праз гэты бот паказаць табе, як шмат існуе беларускай музыкі. 
+  Два разы на тыдзень (у панядзелак і чацвер) мы будзем дасылаць табе рандомныя трэкі. 
+  Спадзяемся трапіць у твой настрой. А пакуль можаш паслухаць іх ніжэй, націснуўшы на кнопку.'
   button: 'Падборка новых трэкаў'
 B_playlists: 'Плэйлісты'
 B_news: 'Навіны'
